# janus

./: .gitattributes  .gitignore  LICENSE  README.md
core/: .gdb_history  .gitignore  Constants.cpp  Constants.hpp  Image.cpp  Image.hpp  Makefile  MutationStage.cpp  MutationStage.hpp  Program.cpp  Program.hpp  README.md  SyscallMutator.cpp  SyscallMutator.hpp  Utils.cpp  Utils.hpp  create_corpus.cpp  image_test.cpp  mutator_wrapper.cpp  mutator_wrapper.hpp  program_show.cpp  program_test.cpp  sanity-check.cpp
core/afl-image/: .gitignore  Makefile  afl-fuzz.c  afl-showmap.c  config.h  debug.h
core/afl-image-syscall/: Makefile  afl-fuzz.c  config.h
core/afl-image/llvm_mode/: Makefile  afl-llvm-pass.so.cc  kafl-llvm-rt.o.c  kcov-llvm-rt.o.cc
core/afl-syscall/: .gitignore  Makefile  afl-fuzz.c  config.h
ff-gcc/: .gitignore  Makefile  ff-gcc.cc
fs/: fsfuzzer.hh  mount.hh  utils.hh
fs/btrfs/: .gdb_history  .gitignore  Makefile  README.md  btrfs.hh  btrfs_fuzzer.cc  btrfs_fuzzer.hh  btrfs_standalone.cc  btrfs_wrapper.cc  crc32c.c  crc32c.h
fs/ext4/: .gdb_history  .gitignore  Makefile  README.md  ext4_fuzzer.cc  ext4_fuzzer.hh  ext4_standalone.cc  ext4_wrapper.cc
fs/ext4/e2fsprogs/misc/: Makefile.in  e4crypt  e4crypt.8  ext4_parse  ext4_parse.cc
fs/f2fs/: .gdb_history  .gitignore  Makefile  README.md  f2fs_fuzzer.cc  f2fs_fuzzer.hh  f2fs_standalone.cc  f2fs_wrapper.cc
fs/f2fs/f2fsprogs/: .gitignore  VERSION  configure.ac
fs/f2fs/f2fsprogs/fsck/: Makefile.am  dir.c  dump.c  f2fs.h  fsck.c  fsck.h  main.c  mkquota.c  mount.c  node.c  node.h  quotaio.c  quotaio.h  quotaio_tree.c  quotaio_tree.h  quotaio_v2.c  resize.c  segment.c  sload.c  xattr.c  xattr.h
fs/f2fs/f2fsprogs/include/: android_config.h  f2fs_fs.h  quota.h
fs/f2fs/f2fsprogs/lib/: libf2fs.c  libf2fs_io.c  libf2fs_zoned.c
fs/f2fs/f2fsprogs/man/: mkfs.f2fs.8
fs/f2fs/f2fsprogs/mkfs/: Makefile.am  f2fs_format.c  f2fs_format_main.c  f2fs_format_utils.c
fs/f2fs/f2fsprogs/tools/: Makefile.am  f2fscrypt.8  f2fscrypt.c  fibmap.c  sha512.c
fs/f2fs/f2fsprogs/tools/sg_write_buffer/: Android.bp  Makefile.am  sg_cmds_basic.c  sg_cmds_basic2.c  sg_cmds_extra.c  sg_cmds_mmc.c  sg_io_linux.c  sg_lib.c  sg_lib_data.c  sg_pt_common.c  sg_pt_linux.c  sg_pt_linux_nvme.c  sg_write_buffer  sg_write_buffer.c
fs/f2fs/f2fsprogs/tools/sg_write_buffer/include/: freebsd_nvme_ioctl.h  sg_cmds_basic.h  sg_cmds_extra.h  sg_cmds_mmc.h  sg_io_linux.h  sg_lib.h  sg_lib_data.h  sg_pr2serr.h  sg_pt.h  sg_pt_linux.h  sg_pt_nvme.h  sg_pt_win32.h  sg_unaligned.h
istat/: .gitignore  README.md  btrfs.istat  istat
lkl/: .gitignore  MAINTAINERS  btrfs-config  compile  ext4-config  f2fs-config  fat-config  gfs2-config  hfsplus-config  reiserfs-config  xfs-config
lkl/arch/lkl/: .gitignore  Kconfig
lkl/arch/lkl/include/asm/: dma-mapping.h  thread_info.h
lkl/arch/lkl/kernel/: misc.c  syscalls.c  threads.c
lkl/block/: Kconfig.iosched
lkl/crypto/: Kconfig
lkl/drivers/crypto/virtio/: Kconfig
lkl/drivers/input/: Kconfig
lkl/drivers/input/serio/: Kconfig
lkl/drivers/media/rc/: Kconfig
lkl/drivers/ssb/: Kconfig
lkl/drivers/tty/: Kconfig
lkl/drivers/usb/: Kconfig
lkl/fs/btrfs/: Makefile  async-thread.c
lkl/fs/ext4/: Makefile
lkl/fs/f2fs/: Makefile
lkl/fs/fat/: Makefile
lkl/fs/gfs2/: Makefile
lkl/fs/hfsplus/: Makefile
lkl/fs/proc/: Kconfig
lkl/fs/reiserfs/: Makefile
lkl/fs/xfs/: Makefile
lkl/include/asm-generic/: vmlinux.lds.h
lkl/include/linux/: compiler-gcc.h  syscalls.h
lkl/include/uapi/asm-generic/: unistd.h
lkl/include/uapi/linux/: virtio_ring.h
lkl/init/: Kconfig
lkl/lib/raid6/: algos.c
lkl/scripts/: checkpatch.pl
lkl/tools/lkl/: .gitignore  Build  Makefile  Makefile.autoconf  Targets  combined.cpp  executor.cpp  executor.hpp  fsfuzz.c
lkl/tools/lkl/include/: lkl.h
lkl/tools/lkl/lib/: Build  posix-host.c  virtio_blk.c
lkl/tools/lkl/tests/: Build  boot.c
samples/evaluation/: btrfs-00.image  ext4-00.image  ext4-01.image  f2fs-00.image
samples/fuzzing/: btrfs.img  ext4-2.img  ext4-log.img  ext4.img
utils/: afl-parse  minimize.py
